--- a/package.json
+++ b/package.json
@@ -1,13 +1,46 @@
 {
-  "name": "geometric_props_ts",
-  "version": "1.0.0",
+  "name": "geometric-props",
+  "version": "1.0.4",
   "description": "",
-  "main": "main.ts",
+  "main": "./dist/index.js",
   "type": "module",
+  "files": [
+    "dist/**/*"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "lint": "eslint \"**/*.{ts,tsx}\"",
+    "build": "babel src --extensions \".js,.ts\" --out-dir dist"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Brunoengi/geometric_props_ts"
+  },
+  "keywords": [
+    "geometric properties",
+    "2D figures"
+  ],
   "author": "Bruno Teixeira Santos",
-  "license": "ISC"
+  "license": "Creative Common CC BY-NC",
+  "devDependencies": {
+    "@babel/cli": "^7.24.7",
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
+    "@types/jest": "^29.5.12",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "babel-jest": "^29.7.0",
+    "eslint": "^8.57.0",
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest": "^28.6.0",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.2.0",
+    "jest": "^29.7.0",
+    "npm": "^10.8.1",
+    "ts-jest": "^29.1.5",
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.5.2"
+  }
 }
-
