--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   ],
   "scripts": {
     "test": "jest",
-    "lint": "eslint \"**/*.{ts,tsx}\"",
-    "build": "babel src --extensions \".js,.ts\" --out-dir dist"
+    "lint": "eslint \"**/*.{ts,tsx}\""
   },
   "repository": {
     "type": "git",
@@ -37,8 +36,8 @@
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.2.0",
     "jest": "^29.7.0",
-    "npm": "^10.8.1",
     "ts-jest": "^29.1.5",
+    "ts-loader": "^9.5.1",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.5.2"
