--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "files": [
     "dist/**/*"
   ],
+  "readme": "README.npm.md",
   "scripts": {
     "test": "jest",
     "lint": "eslint \"**/*.{ts,tsx}\""
