--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.6",
   "description": "A library for calculating geometric properties of 2D figures",
   "main": "./dist/index.js",
+  "types": "dist/index.d.ts",
   "type": "module",
   "files": [
     "dist/**/*"
