--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "geometric-props",
-  "version": "1.0.6",
+  "version": "1.0.8",
   "description": "A library for calculating geometric properties of 2D figures",
-  "main": "./dist/index.js",
+  "main": "./dist/commonjs/index.js",
+  "module": "./dist/esm/index.js",
+  "types": "./dist/types/index.d.ts",
   "type": "module",
   "files": [
     "dist/**/*"
   ],
   "scripts": {
+    "build:commonjs": "tsc --project tsconfig.cjs.json",
+    "build:esm": "tsc --project tsconfig.esm.json",
+    "build": "npm run build:commonjs && npm run build:esm",
     "test": "jest",
     "lint": "eslint \"**/*.{ts,tsx}\""
   },
@@ -17,7 +22,9 @@
   },
   "keywords": [
     "geometric properties",
-    "2D figures"
+    "2D figures",
+    "math",
+    "green's theorem"
   ],
   "author": "Bruno Teixeira Santos",
   "license": "Creative Common CC BY-NC",
