added support to esm and cjs

--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -1,11 +1,10 @@
 {
   "compilerOptions": {
-    "module": "ESNext",
-    "moduleResolution": "Bundler",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "outDir": "./dist/esm",
     "declaration": true,
     "declarationDir": "./dist/types",
-    "resolveJsonModule": true,
     "paths": {
       "@src/*": ["./src/*"]
     },
