--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "geometric-props",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "A library for calculating geometric properties of 2D figures",
-  "main": "./dist/commonjs/index.js",
+  "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
   "types": "./dist/types/index.d.ts",
   "type": "module",
