--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
-      "outDir": "./dist/commonjs",
+      "outDir": "./dist/cjs",
+      "module": "CommonJS",
       "declaration": true,
       "declarationDir": "./dist/types",
       "resolveJsonModule": true,
