--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "geometric-props",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "description": "A library for calculating geometric properties of 2D figures",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
   "types": "./dist/types/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js"
+    }
+  },
   "type": "module",
   "files": [
     "dist/**/*"
