support to esm and cjs

--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -3,6 +3,7 @@
       "outDir": "./dist/cjs",
       "module": "CommonJS",
       "declaration": true,
+      "esModuleInterop": true,
       "declarationDir": "./dist/types",
       "resolveJsonModule": true,
       "paths": {
