--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "geometric-props",
-  "version": "1.0.13",
+  "version": "1.0.14",
   "description": "A library for calculating geometric properties of 2D figures",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
@@ -8,6 +8,12 @@
   "exports": {
     ".": {
       "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js"
+    },
+    "./esm/": {
+      "import": "./dist/esm/index.js"
+    },
+    "./cjs/": {
       "require": "./dist/cjs/index.js"
     }
   },
