--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "geometric-props",
-  "version": "1.0.15",
+  "version": "1.0.16",
   "description": "A library for calculating geometric properties of 2D figures",
+  "type": "module",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
   "types": "./dist/types/index.d.ts",
