--- a/package.json
+++ b/package.json
@@ -2,27 +2,23 @@
   "name": "geometric-props",
   "version": "1.0.17",
   "description": "A library for calculating geometric properties of 2D figures",
-  "main": "./dist/cjs/index.js",
-  "module": "./dist/esm/index.js",
+  "main": "./dist/cjs/index.cjs",
+  "module": "./dist/esm/index.mjs",
   "types": "./dist/types/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/esm/index.js",
-      "require": "./dist/cjs/index.js"
-    },
-    "./esm/": {
-      "import": "./dist/esm/index.js"
-    },
-    "./cjs/": {
-      "require": "./dist/cjs/index.js"
+      "import": "./dist/esm/index.esm",
+      "require": "./dist/cjs/index.cjs"
     }
   },
   "files": [
     "dist/**/*"
   ],
   "scripts": {
-    "build:cjs": "tsc --project tsconfig.cjs.json",
-    "build:esm": "tsc --project tsconfig.esm.json",
+    "rename:js-to-mjs": "node utils/updateImportsExports.js esm && cd dist/esm && ren *.js *.mjs",
+    "rename:js-to-cjs": "node utils/updateImportsExports.js cjs && cd dist/cjs && ren *.js *.cjs",
+    "build:esm": "tsc --project tsconfig.esm.json && npm run rename:js-to-mjs",
+    "build:cjs": "tsc --project tsconfig.cjs.json && npm run rename:js-to-cjs",
     "build": "npm run build:cjs && npm run build:esm",
     "test": "jest",
     "lint": "eslint \"**/*.{ts,tsx}\""
