Arrange exports in package.json

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "types": "./dist/types/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/esm/index.esm",
+      "import": "./dist/esm/index.mjs",
       "require": "./dist/cjs/index.cjs"
     }
   },
