add support types

--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "geometric-props",
-  "version": "1.0.20",
+  "version": "1.0.21",
   "description": "A library for calculating geometric properties of 2D figures",
   "main": "./dist/cjs/index.cjs",
   "module": "./dist/esm/index.mjs",
-  "types": "./dist/types/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/esm/index.mjs",
-      "require": "./dist/cjs/index.cjs"
+      "import": {
+        "default": "./dist/esm/index.mjs",
+        "types": "./dist/esm/index.d.ts"
+      },
+      "require": {
+        "default": "./dist/cjs/index.cjs",
+        "types": "./dist/cjs/index.d.ts"
+      }
     }
   },
   "files": [
