--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "geometric-props",
-  "version": "1.0.22",
+  "version": "1.0.24",
   "description": "A library for calculating geometric properties of 2D figures",
   "main": "./dist/cjs/index.cjs",
   "module": "./dist/esm/index.mjs",
@@ -20,8 +20,8 @@
     "dist/**/*"
   ],
   "scripts": {
-    "rename:js-to-mjs": "node utils/updateImportsExports.js esm && cd dist/esm && ren *.js *.mjs",
-    "rename:js-to-cjs": "node utils/updateImportsExports.js cjs && cd dist/cjs && ren *.js *.cjs",
+    "rename:js-to-mjs": "node utils/updateImportsExports.js esm && cd dist/esm && ren *.js *.mjs && cd interfaces && ren *.js *.mjs",
+    "rename:js-to-cjs": "node utils/updateImportsExports.js cjs && cd dist/cjs && ren *.js *.cjs && cd interfaces && ren *.js *.cjs",
     "build:esm": "tsc --project tsconfig.esm.json && npm run rename:js-to-mjs",
     "build:cjs": "tsc --project tsconfig.cjs.json && npm run rename:js-to-cjs",
     "build": "npm run build:cjs && npm run build:esm",
