--- a/package.json
+++ b/package.json
@@ -1,30 +1,26 @@
 {
   "name": "geometric-props",
-  "version": "1.0.24",
+  "version": "1.0.25",
   "description": "A library for calculating geometric properties of 2D figures",
   "main": "./dist/cjs/index.cjs",
   "module": "./dist/esm/index.mjs",
+  "types": "./dist/types/index.d.ts",
   "exports": {
     ".": {
-      "import": {
-        "default": "./dist/esm/index.mjs",
-        "types": "./dist/esm/index.d.ts"
-      },
-      "require": {
-        "default": "./dist/cjs/index.cjs",
-        "types": "./dist/cjs/index.d.ts"
-      }
+      "types": "./dist/types/index.d.ts",
+      "import": "./dist/esm/index.mjs",
+      "require": "./dist/cjs/index.cjs"
     }
   },
   "files": [
     "dist/**/*"
   ],
   "scripts": {
-    "rename:js-to-mjs": "node utils/updateImportsExports.js esm && cd dist/esm && ren *.js *.mjs && cd interfaces && ren *.js *.mjs",
-    "rename:js-to-cjs": "node utils/updateImportsExports.js cjs && cd dist/cjs && ren *.js *.cjs && cd interfaces && ren *.js *.cjs",
-    "build:esm": "tsc --project tsconfig.esm.json && npm run rename:js-to-mjs",
-    "build:cjs": "tsc --project tsconfig.cjs.json && npm run rename:js-to-cjs",
-    "build": "npm run build:cjs && npm run build:esm",
+    "clean": "rimraf dist",
+    "postbuild": "node ./utils/postbuild.mjs",
+    "build:esm": "tsc --project tsconfig.esm.json",
+    "build:cjs": "tsc --project tsconfig.cjs.json",
+    "build": "npm run clean && npm run build:cjs && npm run build:esm && npm run postbuild",
     "test": "jest",
     "lint": "eslint \"**/*.{ts,tsx}\""
   },
@@ -54,7 +50,9 @@
     "eslint-plugin-jest": "^28.6.0",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.2.0",
+    "glob": "^10.4.5",
     "jest": "^29.7.0",
+    "rimraf": "^5.0.10",
     "ts-jest": "^29.1.5",
     "ts-loader": "^9.5.1",
     "ts-node-dev": "^2.0.0",
