--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -7,7 +7,8 @@
       "./interfaces"
     ],
       "target": "ES2018",
-      "declaration": true,
+      "declaration": false,
+      "declarationMap": false,
       "esModuleInterop": true,
       "resolveJsonModule": true,
       "paths": {
